[project]
name = "place-order-integration"
version = "0.1.0"
description = "Master end-to-end integration: brings up the whole reference (Sales + catalog + identity + payment/shipping fakes + notifications + analytics) on real infra and asserts the three asymmetries of place_order."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "testcontainers>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["tests"]

[[tool.mypy.overrides]]
module = [
    "testcontainers",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
